versioned_docs/version-2021.2.1/professor/sergio_augusto_dias_castro.mdx
import { Grid } from "@site/src/components/Grid";
import BrowserOnly from "@docusaurus/BrowserOnly";
export const data = {
  title: "Sérgio Augusto Dias Castro",
  weekClasses: [
    {
      dayName: "Segunda-Feira",
      dayClasses: [
        {
          subject: "Matemática II",
          size: 2,
          teachers: [
            "Sérgio Augusto Dias Castro"
          ],
          classroom: "",
          students: [
            "AGO2020"
          ],
          time: "09:25 - 10:15"
        },
        {
          subject: "Matemática II",
          size: 2,
          teachers: [
            "Sérgio Augusto Dias Castro"
          ],
          classroom: "",
          students: [
            "IIW2020"
          ],
          time: "07:30 - 08:20"
        },
        {
          subject: "Matemática Aplicada",
          size: 2,
          teachers: [
            "Sérgio Augusto Dias Castro"
          ],
          classroom: "",
          students: [
            "TADS2020"
          ],
          time: "19:00 - 19:50"
        }
      ]
    },
    {
      dayName: "Terça-Feira",
      dayClasses: [
        {
          subject: "Matemática II",
          size: 2,
          teachers: [
            "Sérgio Augusto Dias Castro"
          ],
          classroom: "",
          students: [
            "IIW2020"
          ],
          time: "10:15 - 11:05"
        }
      ]
    },
    {
      dayName: "Quarta-Feira",
      dayClasses: []
    },
    {
      dayName: "Quinta-Feira",
      dayClasses: []
    },
    {
      dayName: "Sexta-Feira",
      dayClasses: []
    }
  ],
  time: [
    {
      time: "07:30 - 08:20",
      size: 50
    },
    {
      time: "08:20 - 09:10",
      size: 50
    },
    {
      time: "09:10 - 09:25",
      size: 15
    },
    {
      time: "09:25 - 10:15",
      size: 50
    },
    {
      time: "10:15 - 11:05",
      size: 50
    },
    {
      time: "11:05 - 11:55",
      size: 50
    },
    {
      time: "11:55 - 13:10",
      size: 75
    },
    {
      time: "13:10 - 14:00",
      size: 50
    },
    {
      time: "14:00 - 14:50",
      size: 50
    },
    {
      time: "14:50 - 15:05",
      size: 15
    },
    {
      time: "15:05 - 15:55",
      size: 50
    },
    {
      time: "15:55 - 16:45",
      size: 50
    },
    {
      time: "16:45 - 19:00",
      size: 135
    },
    {
      time: "19:00 - 19:50",
      size: 50
    },
    {
      time: "19:50 - 20:40",
      size: 50
    },
    {
      time: "20:40 - 21:00",
      size: 20
    },
    {
      time: "21:00 - 21:50",
      size: 50
    },
    {
      time: "21:50 - 22:40",
      size: 50
    }
  ]
}

# Sérgio Augusto Dias Castro

<div>
  {
    <BrowserOnly>
      {() => (
        <Grid
          title={data.title}
          weekClasses={data.weekClasses}
          time={data.time}
        />
      )}
    </BrowserOnly>
  }
</div>
