versioned_docs/version-2023.2.1/professor/sergio_augusto_dias_castro.mdx
import { Grid } from "@site/src/components/Grid";
import BrowserOnly from "@docusaurus/BrowserOnly";
export const data = {
  title: "Sérgio Augusto Dias Castro",
  base: "",
  weekClasses: [
    {
      dayName: "Segunda-Feira",
      dayClasses: [
        {
          subject: "Matemática 1",
          size: 2,
          teachers: [
            "Sérgio Augusto Dias Castro"
          ],
          classroom: "Sala 7-2",
          students: [
            "EIN2023"
          ],
          time: "10:15 - 11:05"
        },
        {
          subject: "Matemática III",
          size: 2,
          teachers: [
            "Sérgio Augusto Dias Castro"
          ],
          classroom: "Sala 16-2",
          students: [
            "IIW2021"
          ],
          time: "07:30 - 08:20"
        }
      ]
    },
    {
      dayName: "Terça-Feira",
      dayClasses: [
        {
          subject: "IFChess: Incentivo a prática do xadrez no município de Assis Chateaubriand",
          size: 4,
          teachers: [
            "Sérgio Augusto Dias Castro"
          ],
          classroom: "",
          students: [
            "PAIPE2023_B_CD"
          ],
          time: "14:00 - 14:50"
        },
        {
          subject: "IFChess: Incentivo a prática do xadrez no município de Assis Chateaubriand",
          size: 1,
          teachers: [
            "Sérgio Augusto Dias Castro"
          ],
          classroom: "",
          students: [
            "PAIPE2023_B_CD"
          ],
          time: "13:10 - 14:00"
        },
        {
          subject: "Matemática 3",
          size: 2,
          teachers: [
            "Sérgio Augusto Dias Castro"
          ],
          classroom: "Sala 15-2",
          students: [
            "EIN2021"
          ],
          time: "07:30 - 08:20"
        },
        {
          subject: "Matemática II",
          size: 2,
          teachers: [
            "Sérgio Augusto Dias Castro"
          ],
          classroom: "Sala 13-2",
          students: [
            "IIW2022A"
          ],
          time: "10:15 - 11:05"
        }
      ]
    },
    {
      dayName: "Quarta-Feira",
      dayClasses: [
        {
          subject: "Matemática II",
          size: 2,
          teachers: [
            "Sérgio Augusto Dias Castro"
          ],
          classroom: "Sala 13-2",
          students: [
            "IIW2022A"
          ],
          time: "10:15 - 11:05"
        }
      ]
    },
    {
      dayName: "Quinta-Feira",
      dayClasses: [
        {
          subject: "Matemática Básica para estudantes ingressantes nos cursos técnicos do IFPR",
          size: 2,
          teachers: [
            "Sérgio Augusto Dias Castro"
          ],
          classroom: "",
          students: [
            "PAIPE2023_C_CL"
          ],
          time: "13:10 - 14:00"
        }
      ]
    },
    {
      dayName: "Sexta-Feira",
      dayClasses: []
    }
  ],
  time: [
    {
      time: "07:30 - 08:20",
      size: 50
    },
    {
      time: "08:20 - 09:10",
      size: 50
    },
    {
      time: "09:25 - 10:15",
      size: 50
    },
    {
      time: "10:15 - 11:05",
      size: 50
    },
    {
      time: "11:05 - 11:55",
      size: 50
    },
    {
      time: "13:10 - 14:00",
      size: 50
    },
    {
      time: "14:00 - 14:50",
      size: 50
    },
    {
      time: "15:05 - 15:55",
      size: 50
    },
    {
      time: "15:55 - 16:45",
      size: 50
    },
    {
      time: "16:45 - 17:35",
      size: 50
    },
    {
      time: "19:00 - 19:50",
      size: 50
    },
    {
      time: "19:50 - 20:40",
      size: 50
    },
    {
      time: "21:00 - 21:50",
      size: 50
    },
    {
      time: "21:50 - 22:40",
      size: 50
    }
  ]
}

# Sérgio Augusto Dias Castro

<div>
  {
    <BrowserOnly>
      {() => (
        <Grid
          title={data.title}
          weekClasses={data.weekClasses}
          time={data.time}
        />
      )}
    </BrowserOnly>
  }
</div>
